--- a/RemindMe/package.json
+++ b/RemindMe/package.json
@@ -37,7 +37,13 @@
       "js",
       "jsx",
       "json",
-      "node"
+      "node",
+      "ttf"
+    ]
+  },
+  "rnpm": {
+    "assets": [
+      "./assets/fonts/"
     ]
   }
 }
