--- a/RemindMe/package.json
+++ b/RemindMe/package.json
@@ -17,7 +17,8 @@
     "@fortawesome/react-native-fontawesome": "^0.2.3",
     "react": "16.9.0",
     "react-native": "0.61.5",
-    "react-native-svg": "^12.0.3"
+    "react-native-svg": "^12.0.3",
+    "react-native-swipe-gestures": "^1.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
