--- a/RemindMe/package.json
+++ b/RemindMe/package.json
@@ -15,17 +15,25 @@
     "@fortawesome/free-regular-svg-icons": "^5.12.1",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-native-fontawesome": "^0.2.3",
+    "@react-native-community/async-storage": "^1.8.1",
+    "@react-native-community/datetimepicker": "^2.2.3",
+    "@types/uuid": "^7.0.0",
+    "buffer": "^5.5.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-svg": "^12.0.3",
-    "react-native-swipe-gestures": "^1.0.4"
+    "react-native-swipe-gestures": "^1.0.4",
+    "react-native-uuid": "^1.4.9"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
     "@babel/runtime": "^7.6.2",
     "@react-native-community/eslint-config": "^0.0.5",
     "@types/jest": "^24.0.24",
+    "@types/node": "^13.9.0",
     "@types/react-native": "^0.60.25",
+    "@types/react-native-uuid": "^1.4.0",
+    "@types/react-native-uuid-generator": "^4.0.0",
     "@types/react-test-renderer": "16.9.1",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
     "@typescript-eslint/parser": "^2.12.0",
