--- a/RemindMe/package.json
+++ b/RemindMe/package.json
@@ -21,6 +21,7 @@
     "buffer": "^5.5.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-svg": "^12.0.3",
     "react-native-swipe-gestures": "^1.0.4",
     "react-native-uuid": "^1.4.9"
