--- a/core/assets/config.json
+++ b/core/assets/config.json
@@ -1,6 +1,7 @@
 {
   "port": 80,
   "database_config": {
+    "with_migration": false,
     "host": "localhost",
     "port": 5432,
     "user": "postgres",
