--- a/app/RemindMe/package.json
+++ b/app/RemindMe/package.json
@@ -8,11 +8,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.1.0",
     "@react-native-community/async-storage": "~1.11.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/native": "^5.7.3",
     "expo": "~38.0.8",
+    "expo-asset": "~8.1.7",
+    "expo-font": "~8.2.1",
     "expo-status-bar": "^1.0.2",
     "mobx": "^5.15.5",
     "mobx-react": "^6.2.5",
@@ -23,8 +26,7 @@
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
-    "react-native-web": "~0.11.7",
-    "expo-asset": "~8.1.7"
+    "react-native-web": "~0.11.7"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
