Addes some basic components (Button, TextButton, Input) + finished login design implementation

--- a/app/RemindMe/app.json
+++ b/app/RemindMe/app.json
@@ -23,7 +23,8 @@
       "favicon": "./assets/favicon.png"
     },
     "android": {
-      "package": "at.EliasTrummer.RemindMe"
+      "package": "at.EliasTrummer.RemindMe",
+      "softwareKeyboardLayoutMode": "pan"
     }
   }
 }
